--- a/animais/templates/base.html
+++ b/animais/templates/base.html
@@ -4,48 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Lar de Patas{% endblock %}</title>
-    <style>
-        .blur-nav {
-            position: fixed; /* Fixa a navbar no topo */
-            top: 0;
-            left: 50%; /* Centraliza horizontalmente */
-            transform: translateX(-50%);
-            max-width: 900px; /* Define o comprimento máximo */
-            width: 90%; /* Garante responsividade em telas menores */
-            backdrop-filter: blur(10px);
-            background-color: rgba(255, 255, 255, 0.7);
-            z-index: 50; /* Garante que fique acima do conteúdo */
-        }
-        body {
-            padding-top: 4.5rem; /* Compensa a navbar fixa */
-            background: linear-gradient(135deg, #e2b40e 90%, #f88101 50%);
-            min-height: 100vh;
-        }
-        footer {
-            color: white;
-        }
-        #nav-btn-group .btn-primary.active,
-        #nav-btn-group .btn-primary:active,
-        #nav-btn-group .show > .btn-primary.dropdown-toggle {
-            background-color:rgb(42, 42, 42); /* Nova cor de fundo */
-            border-color:rgb(89, 57, 34); /* Nova cor da borda */
-            color: #ffffff; /* Cor do texto */
-        }
-        #nav-btn-group .btn-primary {
-            background-color: rgb(42, 42, 42); /* Nova cor de fundo */
-            border-color: rgb(89, 57, 34); /* Nova cor da borda */
-            color: #ffffff; /* Cor do texto */
-        }
-    </style>
 
     <script src="https://unpkg.com/vue@3.5.13/dist/vue.global.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Bootstrap -->
-    <!-- Bootstrap CSS -->
     {% load static %}
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
@@ -59,11 +27,18 @@
                 <h1 class="text-xl font-bold text-gray-800">
                     <a href="{% url 'home' %}" >Lar de Patas</a>
                     </h1>
-
-                <div class="btn-group" id ="nav-btn-group">
-                    <a href="{% url 'listar_animais' %}" class="btn btn-primary active" aria-current="page">Listar Animais</a>
-                    <a href="{% url 'adicionar_animal' %}" class="btn btn-primary">Cadastrar Animal</a>
-                </div>
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Mais
+                        </a>
+                        <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="{% url 'listar_animais' %}">Listar Animais</a></li>
+                        <li><a class="dropdown-item" href="{% url 'adicionar_animal' %}">Adicionar Animal</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        </ul>
+                    </li>
+                </ul>    
             </div>
         </nav>
 
