--- a/animais/templates/listar_animais.html
+++ b/animais/templates/listar_animais.html
@@ -2,54 +2,8 @@
 {% block title %}Animais{% endblock %}
 {% block content %}
 
-<style>
-    h2 {
-       font-size: 2rem; /* Ajuste o tamanho */
-       font-weight: bold; /* Torne o texto em negrito */
-       color: #ffffff; /* Cor do texto */
-       text-align: center; /* Centralize o texto */
-       margin-bottom: 20px; /* Espaçamento inferior */
-       margin-top: 60px;
-   }
-   .cards-container {
-    display: flex;
-    flex-wrap: wrap; /* Permite que os cards "quebrem linha" */
-    gap: 16px; /* Espaçamento entre os cards */
-    justify-content: center; /* Centraliza os cards horizontalmente */
-    margin: 20px 0; /* Espaçamento em volta do contêiner */
-}
-
-.card {
-    width: 18rem; /* Largura fixa dos cards */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra leve */
-    border-radius: 8px; /* Cantos arredondados */
-    overflow: hidden; /* Garante que o conteúdo fique dentro dos limites */
-    transition: transform 0.3s ease; /* Efeito ao passar o mouse */
-}
-
-.card:hover {
-    transform: scale(1.05); /* Aumenta levemente no hover */
-}
-
-.card-body {
-    padding: 16px; /* Espaçamento interno do card */
-}
-
-.card-title {
-    font-size: 1.25rem;
-    font-weight: bold;
-}
-
-.card-link {
-    color: #007bff;
-    text-decoration: none;
-}
-
-.card-link:hover {
-    text-decoration: underline;
-}
- </style>
-
+{% load static %}
+<link href="{% static 'css/styles.css' %}" rel="stylesheet">
 
  <h2>Animais disponíveis</h2>
  {% load static %}
