--- a/animais/templates/atualizar_animal.html
+++ b/animais/templates/atualizar_animal.html
@@ -10,6 +10,6 @@
 <form method="post">
    {% csrf_token %}
    {{ form.as_p }}
-   <button type="submit">Salvar Alterações</button>
+   <button type="submit" class="submit_button">Salvar Alterações</button>
 </form>
 {% endblock %}
