--- a/animais/templates/base.html
+++ b/animais/templates/base.html
@@ -5,16 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Lar de Patas{% endblock %}</title>
 
-    <script src="https://unpkg.com/vue@3.5.13/dist/vue.global.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-
     <!-- Bootstrap -->
     {% load static %}
-    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
 
-
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -27,6 +24,7 @@
                 <h1 class="text-xl font-bold text-gray-800">
                     <a href="{% url 'home' %}" >Lar de Patas</a>
                     </h1>
+                    <i class="bi bi-person-fill"></i>
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -36,23 +34,21 @@
                         <li><a class="dropdown-item" href="{% url 'listar_animais' %}">Listar Animais</a></li>
                         <li><a class="dropdown-item" href="{% url 'adicionar_animal' %}">Adicionar Animal</a></li>
                         <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
                         </ul>
                     </li>
                 </ul>    
             </div>
         </nav>
+        <main>
+            {% block content %}
+            <!-- Conteúdo específico da página -->
+            {% endblock %}
+        </main>
+<!-- Footer -->
+<footer class="max-w-4xl mx-auto mt-12 mb-8 text-center">
+    <p class="text-white-600">Developed ❤️ by José Eudes</p>
+</footer>     
 
-    <!-- Conteúdo principal -->
-    <div class="container">
-        {% block content %}
-            <h1 class="text-center text-white">Bem-vindo ao Lar de Patas</h1>
-            <p class="text-center text-white">Seu lugar para ajudar e adotar amigos de quatro patas.</p>
-        {% endblock %}
-    </div>
-
-    <!-- Footer -->
-    <footer class="max-w-4xl mx-auto mt-12 mb-8 text-center">
-        <p class="text-white-600">Developed ❤️ by José Eudes</p>
-    </footer>
 </body>
 </html>
