--- a/animais/templates/register.html
+++ b/animais/templates/register.html
@@ -4,6 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrar</title>
+        <!-- Custom CSS -->
+        <style>
+                    
+        form {
+            max-width: 400px; 
+            margin: 0 auto; 
+            padding: 20px; 
+            background-color: #f8f9fa; 
+            border-radius: 8px; 
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+        }
+
+        .form-control {
+            border: 1px solid #ced4da; 
+            border-radius: 4px; 
+            padding: 0.5rem; 
+        }
+
+        .form-group {
+            margin-bottom: 20px;
+        }
+
+        .btn-primary {
+            background-color: #007bff;
+            border: none;
+            border-radius: 4px;
+            padding: 10px 15px;
+            transition: all 0.3s ease;
+        }
+
+        .btn-primary:hover {
+            background-color: #0056b3;
+        }
+
+        /* Título do formulário */
+        h2 {
+            margin-bottom: 20px;
+            color: #333;
+        }
+
+        /* Mensagens de erro ou alerta */
+        .alert {
+            margin-top: 15px; 
+        }
+
+        /* Texto abaixo do botão */
+        p {
+            margin-top: 15px; 
+            font-size: 14px;
+        }
+        </style>
 
     <!-- Bootstrap CSS -->
     {% load static %}
@@ -26,20 +77,19 @@
             </div>
 
             <div class="form-group">
-                <label for="{{ form.password1.id_for_label }}">{{ form.password1.label }}</label>
+                <label for="{{ form.password1.id_for_label }}">Senha:</label>
                 {{ form.password1 }}
             </div>
 
             <div class="form-group">
-                <label for="{{ form.password2.id_for_label }}">{{ form.password2.label }}</label>
+                <label for="{{ form.password2.id_for_label }}"> Confirmar senha:</label>
                 {{ form.password2 }}
             </div>
 
             <button type="submit" class="btn btn-primary btn-block">Registrar</button>
         </form>
     </div>
-
-    <!-- Bootstrap JS and dependencies -->
+    <!-- Bootstrap JS -->
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </body>
 </html>
