css de formalários

--- a/animais/templates/home.html
+++ b/animais/templates/home.html
@@ -7,7 +7,7 @@
 
    <h2>Bem-vindo a nossa plataforma</h2>
 
-      <p class="text-home">
+      <p class="text_home">
       O Lar de Patas é uma plataforma dedicada a transformar a vida de cães/gatos em situação de vulnerabilidade, conectando-os a pessoas dispostas a oferecer um lar cheio de amor e cuidado. Nosso objetivo é facilitar o processo de adoção responsável, ajudando a dar uma segunda chance a esses animais incríveis.
       </p>
 
