--- a/animais/templates/atualizar_animal.html
+++ b/animais/templates/atualizar_animal.html
@@ -2,14 +2,26 @@
 {% block title %}Atualizar Animal{% endblock %}
 {% block content %}
 
+{% load widget_tweaks %}
 {% load static %}
 <link href="{% static 'css/styles.css' %}" rel="stylesheet">
 
-
 <h2>Atualizar Animal</h2>
+
 <form method="post">
    {% csrf_token %}
-   {{ form.as_p }}
+   {% for field in form %}
+   <div class="form-group">
+       <label class="label_text" for="{{ field.id_for_label }}">{{ field.label }}</label>
+       {{ field|add_class:"form-input" }}
+       {% if field.errors %}
+       <div class="text-danger">
+           {{ field.errors }}
+       </div>
+       {% endif %}
+   </div>
+   {% endfor %}
    <button type="submit" class="submit_button">Salvar Alterações</button>
 </form>
+
 {% endblock %}
