--- a/animais/templates/base.html
+++ b/animais/templates/base.html
@@ -11,11 +11,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-        <!-- Bootstrap -->
-        {% load static %}
-        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-        <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-        <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+    <!-- Bootstrap -->
+    {% load static %}
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+
 </head>
 <body>
         <!-- Navigation Bar -->
@@ -25,6 +26,7 @@
                 <h1 class="text-xl font-bold text-gray-800">
                     <a href="{% url 'home' %}" >Lar de Patas</a>
                     </h1>
+   
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -33,11 +35,27 @@
                         <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="{% url 'listar_animais' %}">Listar Animais</a></li>
                         <li><a class="dropdown-item" href="{% url 'adicionar_animal' %}">Adicionar Animal</a></li>
+                        </ul>
+                    </li>
+                </ul> 
+
+                <!-- Perfil -->
+                <ul class="">
+                    <li class="dropdown">
+                        <a class="nav-link " role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+                                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
+                            </svg>                          
+                        </a>
+                        <ul class="dropdown-menu">
+                        <li><p style= "margin :  10px;">Olá, {{ request.user.username }}</p></li>
+                        <li><p style= "margin : 10px;">{{ request.user.email }}</p></li>
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
                         </ul>
                     </li>
-                </ul>    
+                </ul>  
+
             </div>
         </nav>
         <main>
@@ -45,6 +63,7 @@
             <!-- Conteúdo específico da página -->
             {% endblock %}
         </main>
+        
 <!-- Footer -->
 <footer class="max-w-4xl mx-auto mt-12 mb-8 text-center">
     <p class="text-white-600">Developed ❤️ by José Eudes</p>
