--- a/animais/templates/login.html
+++ b/animais/templates/login.html
@@ -5,57 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login</title>
-    <!-- Custom CSS -->
-    <style>
-        form {
-            max-width: 400px;
-            margin: 0 auto; 
-            padding: 20px; 
-            background-color: #f8f9fa; 
-            border-radius: 8px; 
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        .form-control {
-            border: 1px solid #ced4da; 
-            border-radius: 4px; 
-            padding: 0.5rem; 
-        }
-
-        .form-group {
-            margin-bottom: 20px; 
-        }
-
-        .btn-primary {
-            background-color: #007bff;
-            border: none;
-            border-radius: 4px;
-            padding: 10px 15px;
-            transition: all 0.3s ease;
-        }
-
-        .btn-primary:hover {
-            background-color: #0056b3;
-        }
-
-        h2 {
-            margin-bottom: 20px;
-            color: #333;
-        }
-
-        .alert {
-            margin-top: 15px; 
-        }
-
-        p {
-            margin-top: 15px; 
-            font-size: 14px;
-        }
-    </style>
 
     <!-- Bootstrap CSS -->
     {% load static %}
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
 
 </head>
 <body>
@@ -63,29 +17,30 @@
         <div class="row justify-content-center">
             <div class="col-md-4">
                 <h2 class="text-center">Login</h2>
-                <form method="post">
-                {% csrf_token %}
-                    <div class="form-group">
-                        <label for="username">Usuário:</label>
-                        <input type="text" name="username" class="form-control"
-                        id="username" required>
-                    </div>
-                    <div class="form-group">
-                    <label for="password">Senha: </label>
-                    <input type="password" name="password" class="form-control"
-                    id="password" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary btn-block mt-
-                    3">Login</button>
-                    <p>Não possui uma conta? <a href="{% url 'register' %}">Faça o seu cadastro aqui</a>.</p>
+                    <form method="post">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <label class="label_text" for="username">Usuário:</label>
+                            <input type="text" name="username" id="username" class="form-input" required>
+                        </div>
+                        <div class="form-group">
+                            <label class="label_text" for="password">Senha:</label>
+                            <input type="password" name="password" id="password" class="form-input" required>
+                        </div>
+                        <button type="submit" class="submit_button">Login</button>                        
+
+                        <p id="text_login">Não possui uma conta? <a href="{% url 'register' %}">Faça o seu cadastro aqui</a>.</p>
                     </form>
+                    
                     {% if messages %}
                     <div class="mt-3">
-                    {% for message in messages %}
-                    <div class="alert alert-danger">{{ message }}</div>
-                    {% endfor %}
-                </div>
-                {% endif %}
+
+                        {% for message in messages %}
+                        <div class="alert alert-danger">{{ message }}</div>
+                        {% endfor %}
+
+                    </div>
+                    {% endif %}
             </div>
         </div>
     </div>
