--- a/animais/templates/register.html
+++ b/animais/templates/register.html
@@ -4,61 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrar</title>
-        <!-- Custom CSS -->
-        <style>
-                    
-        form {
-            max-width: 400px; 
-            margin: 0 auto; 
-            padding: 20px; 
-            background-color: #f8f9fa; 
-            border-radius: 8px; 
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
-        }
-
-        .form-control {
-            border: 1px solid #ced4da; 
-            border-radius: 4px; 
-            padding: 0.5rem; 
-        }
-
-        .form-group {
-            margin-bottom: 20px;
-        }
-
-        .btn-primary {
-            background-color: #007bff;
-            border: none;
-            border-radius: 4px;
-            padding: 10px 15px;
-            transition: all 0.3s ease;
-        }
-
-        .btn-primary:hover {
-            background-color: #0056b3;
-        }
-
-        /* Título do formulário */
-        h2 {
-            margin-bottom: 20px;
-            color: #333;
-        }
-
-        /* Mensagens de erro ou alerta */
-        .alert {
-            margin-top: 15px; 
-        }
-
-        /* Texto abaixo do botão */
-        p {
-            margin-top: 15px; 
-            font-size: 14px;
-        }
-        </style>
 
     <!-- Bootstrap CSS -->
     {% load static %}
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+
+    {% load widget_tweaks %}
 </head>
 <body>
     <div class="container mt-5">
@@ -67,26 +19,23 @@
             {% csrf_token %}
 
             <div class="form-group">
-                <label for="{{ form.username.id_for_label }}">{{ form.username.label }}</label>
-                {{ form.username }}
+                <label class="label_text" for="{{ form.username.id_for_label }}">{{ form.username.label }}</label>
+                {{ form.username|add_class:"form-input" }}
             </div>
-
             <div class="form-group">
-                <label for="{{ form.email.id_for_label }}">{{ form.email.label }}</label>
-                {{ form.email }}
+                <label class="label_text" for="{{ form.email.id_for_label }}">{{ form.email.label }}</label>
+                {{ form.email|add_class:"form-input" }}
             </div>
-
             <div class="form-group">
-                <label for="{{ form.password1.id_for_label }}">Senha:</label>
-                {{ form.password1 }}
+                <label class="label_text" for="{{ form.password1.id_for_label }}">Senha:</label>
+                {{ form.password1|add_class:"form-input" }}
             </div>
-
             <div class="form-group">
-                <label for="{{ form.password2.id_for_label }}"> Confirmar senha:</label>
-                {{ form.password2 }}
+                <label class="label_text" for="{{ form.password2.id_for_label }}">Confirmar senha:</label>
+                {{ form.password2|add_class:"form-input" }}
             </div>
-
-            <button type="submit" class="btn btn-primary btn-block">Registrar</button>
+            <button type="submit" class="submit_button">Registrar</button>
+            
         </form>
     </div>
     <!-- Bootstrap JS -->
